--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Amat Fahlevy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,22 +15,21 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-star"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Mai Van Wagner</h1>
-								<!-- //<p>Personal Profolio <a href="https://html5up.net">HTML5 UP</a> and released<br /> -->
-								<!-- for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p> -->
+								<h1>Amat Fahlevy</h1>
+
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#activity">Activity</a></li>
+								<li><a href="#education">Education</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+
 							</ul>
 						</nav>
 					</header>
@@ -46,26 +40,26 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="./images/anh.jpg" alt="" /></span>
-								<p>My name is Mai Van Wagner, and I am a self-motivated person with excellent communication skills. I am ambitious and driven. I thrive on challenge and constantly set goals for myself, so I have something to strive
-								toward. I’m not comfortable with settling, and I’m always looking for an opportunity to do better and achieve greatness.
-								In my previous role, I was promoted three times in less than two years. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<span class="image main"><img src="./images/amt.jpg" alt="Amat Fahlevy" /></span>
+						
+						
+								<p>My name is Amat , and I am a self-motivated person with excellent communication skills. I am ambitious and driven. I thrive on challenge and constantly set goals for myself.
+					</p>
 								<p></p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="./images/work.jpg" alt="" /></span>
-								<p>I write programs in a variety of computer languages, such as Ruby, Javascript and so on.</p>
-								<!-- <p>I love using JavaScript because it’s such an elegant language with so many purposes. I did a bunch of game projects like connect four, tic-tac-toe in JavaScript. </p> -->
+						<!--  -->
+							<article id="activity">
+								<h2 class="major">Activity</h2>
+								<span class="image main"><img src="./images/activity.jpg" alt="Activity" /></span>
+								<p>I like to make simple project using html, css, javascript, bootstrap, and others</p>
 							</article>
 
-						<!-- About -->
-							<article id="about">
+				<!-- Education -->
+							<article id="education">
 								<h2 class="major">Education</h2>
-								<span class="image main"><img src="./images/education.jpg" alt="" /></span>
-								<p>App Academy Bootcamp</p>
+								<span class="image main"><img src="./images/education.jpg" alt="Education" /></span>
+				<p> 2009-2011 di TK RA Masyitah, 2011-2017 di MII Kalipucang, 2017-2020 di SMP N 7 Batang. </p>
 							</article>
 
 						<!-- Contact -->
@@ -92,10 +86,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/profile.php?id=100003511530532" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/Maivw" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/skymatz" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100020954448772" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://instagram.com/amatfahlevy" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/skymatz" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
